fix update password problem and hide the visibility of the current password

--- a/frontend/src/styles/_profile.scss
+++ b/frontend/src/styles/_profile.scss
@@ -79,7 +79,6 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-
         gap: 1em;
 
         .label-profile-pass {
@@ -99,9 +98,12 @@
           border: none;
           width: 30vw;
           height: 6vh;
+
           .profile-input-pass {
             background: transparent;
             border: none;
+            outline: none;
+            width: 100%;
 
             &::placeholder {
               font-family: var(--text-font);
